# nh

./: .taplo.toml  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  README.md  fix.sh  flake.nix  package.nix  shell.nix
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
.github/ISSUE_TEMPLATE/: bug.yml
.github/workflows/: build.yaml  changelog.yaml  check.yaml  ci.yaml  cleanup.yaml  hotpath-profile.yaml  nixos-search.yaml  profile.yaml  tag.yaml  test.yaml
crates/nh/: Cargo.toml
crates/nh-clean/: Cargo.toml
crates/nh-clean/src/: clean.rs
crates/nh-command/: Cargo.toml
crates/nh-command/src/: command.rs
crates/nh-config/: Cargo.toml
crates/nh-config/src/: lib.rs
crates/nh-core/: Cargo.toml
crates/nh-core/src/: args.rs  checks.rs  command.rs  elevation.rs  installable.rs  lib.rs  progress.rs  update.rs  util.rs
crates/nh-darwin/: Cargo.toml
crates/nh-darwin/src/: args.rs  darwin.rs
crates/nh-diff/: Cargo.toml
crates/nh-diff/src/: lib.rs
crates/nh-home/: Cargo.toml
crates/nh-home/src/: args.rs  home.rs
crates/nh-installable/: Cargo.toml
crates/nh-installable/src/: defaults.rs  lib.rs  tests.rs
crates/nh-nixos/: Cargo.toml
crates/nh-nixos/src/: args.rs  generations.rs  lib.rs  nixos.rs
crates/nh-passthrough/: Cargo.toml
crates/nh-passthrough/src/: passthrough.rs
crates/nh-remote/: Cargo.toml
crates/nh-remote/src/: copy.rs  dix.rs  remote.rs
crates/nh-search/: Cargo.toml
crates/nh-search/src/: args.rs  backend.rs  branches.rs  channel.rs  issues.rs  lib.rs  offline.rs  online.rs  prs.rs  query.rs  render.rs  search.rs  terminal.rs  types.rs
crates/nh-search/src/github/: auth.rs  issues.rs  mod.rs  prs.rs  reachability.rs  transport.rs  types.rs
crates/nh-search/src/render/: common.rs  issues.rs  mod.rs  options.rs  packages.rs  prs.rs
crates/nh-ui/: Cargo.toml
crates/nh-ui/src/: lib.rs
crates/nh-util/: Cargo.toml
crates/nh-util/src/: update.rs  util.rs
crates/nh/src/: interface.rs  lib.rs  logging.rs
crates/nix-command/: Cargo.toml  README.md
crates/nix-command/src/: lib.rs
crates/xtask/src/: main.rs  man.rs
docs/: README.md  remote-build.md
src/: checks.rs  clean.rs  commands.rs  darwin.rs  generations.rs  home.rs  installable.rs  interface.rs  json.rs  lib.rs  logging.rs  main.rs  nixos.rs  notify.rs  remote.rs  search.rs  update.rs  util.rs
src/plugins/: api.rs  config.rs  hooks.rs  manager.rs  mod.rs  plugin.rs  types.rs
src/util/: mod.rs  platform.rs
test/: ssh-keys.nix
test/vm/: test-remote.nix
xtask/: Cargo.toml
xtask/src/: main.rs  man.rs
