[package]
name                   = "nh-command"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/command.rs"

[dependencies]
color-eyre.workspace     = true
inquire.workspace        = true
nh-installable.workspace = true
nh-passthrough.workspace = true
secrecy.workspace        = true
serial_test.workspace    = true
shlex.workspace          = true
subprocess.workspace     = true
thiserror.workspace      = true
tracing.workspace        = true
which.workspace          = true
