[package]
name                   = "nh-core"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[dependencies]
clap.workspace           = true
color-eyre.workspace     = true
nh-installable.workspace = true
nh-passthrough.workspace = true
nh-util.workspace        = true
proptest.workspace       = true
semver.workspace         = true
serde_json.workspace     = true
serial_test.workspace    = true
tracing.workspace        = true
