[package]
name                   = "nh-core"
description            = "This is an internal component crate of nh"
version.workspace      = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true
publish                = true

[dependencies]
clap.workspace           = true
color-eyre.workspace     = true
indicatif.workspace      = true
inquire.workspace        = true
nh-installable.workspace = true
nix.workspace            = true
nix-command.workspace    = true
regex.workspace          = true
secrecy.workspace        = true
semver.workspace         = true
serde_json.workspace     = true
shlex.workspace          = true
subprocess.workspace     = true
thiserror.workspace      = true
tracing.workspace        = true
which.workspace          = true

[dev-dependencies]
proptest.workspace    = true
serial_test.workspace = true
tempfile.workspace    = true

[target.'cfg(target_os="macos")'.dependencies]
system-configuration.workspace = true

[lints]
workspace = true
