[package]
name                   = "nh-home"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true

[lib]
path = "src/home.rs"

[dependencies]
anstyle.workspace             = true
chrono.workspace              = true
clap.workspace                = true
clap-verbosity-flag.workspace = true
color-eyre.workspace          = true
inquire.workspace             = true
nh-command.workspace          = true
nh-core.workspace             = true
nh-installable.workspace      = true
nh-passthrough.workspace      = true
nh-remote.workspace           = true
nh-util.workspace             = true
nix.workspace                 = true
serde_json.workspace          = true
serial_test.workspace         = true
tempfile.workspace            = true
tracing.workspace             = true
yansi.workspace               = true
