[package]
name                   = "nh-home"
version.workspace      = true
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
path = "src/home.rs"

[dependencies]
clap.workspace           = true
color-eyre.workspace     = true
inquire.workspace        = true
nh-core.workspace        = true
nh-diff.workspace        = true
nh-installable.workspace = true
nh-remote.workspace      = true
tempfile.workspace       = true
tracing.workspace        = true

[lints]
workspace = true
