[package]
name                   = "nh-home"
description            = "This is an internal component crate of nh"
version.workspace      = true
publish                = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lib]
path = "src/home.rs"

[dependencies]
clap.workspace           = true
color-eyre.workspace     = true
inquire.workspace        = true
nh-core.workspace        = true
nh-diff.workspace        = true
nh-installable.workspace = true
nh-remote.workspace      = true
tempfile.workspace       = true
tracing.workspace        = true

[lints]
workspace = true
