[package]
name                   = "nh-installable"
version.workspace      = true
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
clap.workspace       = true
color-eyre.workspace = true
tracing.workspace    = true
yansi.workspace      = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace    = true

[lints]
workspace = true
