[package]
name                   = "nh-nixos"
description            = "This is an internal component crate of nh"
version.workspace      = true
publish                = true
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
chrono.workspace         = true
clap.workspace           = true
color-eyre.workspace     = true
inquire.workspace        = true
nh-core.workspace        = true
nh-diff.workspace        = true
nh-installable.workspace = true
nh-remote.workspace      = true
nix.workspace            = true
serde_json.workspace     = true
tempfile.workspace       = true
tracing.workspace        = true

[lints]
workspace = true
