[package]
name                   = "nh-passthrough"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true


[lib]
path = "src/passthrough.rs"

[dependencies]
clap.workspace    = true
tracing.workspace = true
