[package]
name                   = "nh-remote"
version                = "0.1.0"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish                = false

[lib]
path = "src/remote.rs"

[dependencies]
color-eyre.workspace     = true
dix.workspace            = true
inquire.workspace        = true
nh-core.workspace        = true
nh-installable.workspace = true
nix-command.workspace    = true
secrecy.workspace        = true
shlex.workspace          = true
signal-hook.workspace    = true
subprocess.workspace     = true
tracing.workspace        = true
which.workspace          = true

[dev-dependencies]
proptest.workspace    = true
serial_test.workspace = true

[lints]
workspace = true
