[package]
name                   = "nh-search"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
chrono.workspace              = true
clap.workspace                = true
color-eyre.workspace          = true
elasticsearch-dsl.workspace   = true
indicatif.workspace           = true
inquire.workspace             = true
nh-config.workspace           = true
regex.workspace               = true
reqwest.workspace             = true
secrecy.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
spam-db.workspace             = true
subprocess.workspace          = true
supports-hyperlinks.workspace = true
textwrap.workspace            = true
tracing.workspace             = true
yansi.workspace               = true

[lints]
workspace = true
