[package]
name                   = "nh-search"
description            = "This is an internal component crate of nh"
version.workspace      = true
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish                = true

[dependencies]
chrono.workspace              = true
clap.workspace                = true
color-eyre.workspace          = true
elasticsearch-dsl.workspace   = true
inquire.workspace             = true
nh-core.workspace             = true
regex.workspace               = true
reqwest.workspace             = true
secrecy.workspace             = true
serde.workspace               = true
serde_json.workspace          = true
spam-db.workspace             = true
subprocess.workspace          = true
supports-hyperlinks.workspace = true
tempfile.workspace            = true
textwrap.workspace            = true
tracing.workspace             = true
yansi.workspace               = true

[dev-dependencies]
serial_test.workspace = true
tempfile.workspace    = true

[lints]
workspace = true
