[package]
name                   = "nh-ui"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[dependencies]
color-eyre.workspace          = true
crossterm.workspace           = true
supports-hyperlinks.workspace = true

[lints]
workspace = true
