[package]
name                   = "nh-util"
version                = "0.1.0"
publish                = false
edition.workspace      = true
license.workspace      = true
rust-version.workspace = true

[lints]
workspace = true


[lib]
path = "src/util.rs"

[dependencies]
clap.workspace                = true
color-eyre.workspace          = true
dix.workspace                 = true
nh-command.workspace          = true
nh-installable.workspace      = true
nix.workspace                 = true
regex.workspace               = true
serde_json.workspace          = true
tempfile.workspace            = true
tracing.workspace             = true
