[package]
name                   = "nix-command"
version                = "0.2.3"
edition.workspace      = true
rust-version.workspace = true
license.workspace      = true
publish                = false

[dependencies]
subprocess.workspace = true
thiserror.workspace  = true

[lints]
workspace = true
